Fix for <pre> whitespace on edit pages

--- a/bloom_nofos/bloom_nofos/static/styles.css
+++ b/bloom_nofos/bloom_nofos/static/styles.css
@@ -33,6 +33,10 @@ body > footer {
   word-break: break-word;
 }
 
+.nofo-edit-table--subsection--body pre {
+  white-space: pre-wrap;
+}
+
 .main-martor {
   margin-top: 0;
   margin-bottom: 0;
